@@ -3,6 +3,7 @@
 1. Use a pin icon for pin/unpin actions.
 2. Allow 'My Music', etc, to be collapsed.
 3. Add dynamic playlists entry to menus.
+4. Move player controls in mobile now-playing if very wide.
 
 0.2.4
 -----
